Fixed transition bugs on safario ios

--- a/css/style.css
+++ b/css/style.css
@@ -101,7 +101,7 @@ h5 {
   padding: 1.5rem 4rem;
   display: inline-block;
   border-radius: 2px;
-  transition: all 0.2s;
+  transition: transform 0.2s, opacity 0.2s, box-shadow 0.2s;
   position: relative;
   font-size: 1.2rem;
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
@@ -136,7 +136,7 @@ h5 {
   top: 0;
   left: 0;
   z-index: -1;
-  transition: all 0.4s; }
+  transition: transform 0.4s, opacity 0.4s, box-shadow 0.4s; }
 
 .card {
   perspective: 150rem;
@@ -167,7 +167,6 @@ h5 {
     font-size: 2rem;
     width: 100%;
     height: 18vh;
-    -webkit-transition: transform 0.8s ease, height 0.8s ease;
     transition: transform 0.8s ease, height 0.8s ease;
     position: absolute;
     top: 0;
@@ -202,7 +201,6 @@ h5 {
       .card__side--front-Portfolio {
         line-height: 2.5; }
     .card__side--back {
-      -webkit-transform: rotateY(180deg);
       transform: rotateY(180deg);
       background-color: #fff;
       font-size: 1.4rem;
@@ -228,10 +226,8 @@ h5 {
     z-index: 555555 !important;
     transition-delay: 0s; }
   .flipcard-checkbox:checked + .card .card__side--front {
-    -webkit-transform: rotateY(-180deg);
     transform: rotateY(-180deg); }
   .flipcard-checkbox:checked + .card .card__side--back {
-    -webkit-transform: rotateY(0);
     transform: rotateY(0);
     height: 80vh;
     width: 80vw; }
@@ -251,7 +247,7 @@ h5 {
   transform: translateY(0); }
 
 .collapsible__section {
-  transition: all 0.5s ease-in-out;
+  transition: max-height 0.5s ease-in-out;
   transform-style: preserve-3d;
   display: block;
   max-height: 6rem;
@@ -275,14 +271,14 @@ h5 {
     background-color: #777;
     display: block;
     position: absolute;
-    transition: all 0.5s ease-in-out; }
+    transition: transform 0.5s ease-in-out; }
   .collapsible__icon::after {
     content: "";
     transform: rotate(90deg); }
 
 .collapsible__content {
   margin-top: 1rem;
-  transition: all 0.5s ease-in-out;
+  transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out;
   font-size: 1.5rem;
   opacity: 0;
   transform: translateY(-5rem);
