--- a/sass/components/_btn.scss
+++ b/sass/components/_btn.scss
@@ -7,7 +7,7 @@
     padding: 1.5rem 4rem;
     display: inline-block;
     border-radius: 2px;
-    transition: all 0.2s;
+    transition: transform 0.2s, opacity 0.2s, box-shadow 0.2s;
     position: relative;
     font-size: 1.2rem;
     box-shadow: $box-shadow-btn-down;
@@ -45,6 +45,6 @@
     top: 0;
     left: 0;
     z-index: -1;
-    transition: all 0.4s;
+    transition: transform 0.4s, opacity 0.4s, box-shadow 0.4s;
   }
 }
