--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -43,7 +43,6 @@
     font-size: 2rem;
     width: 100%;
     height: 18vh;
-    -webkit-transition: transform 0.8s ease, height 0.8s ease;
     transition: transform 0.8s ease, height 0.8s ease;
 
     position: absolute;
@@ -92,7 +91,6 @@
       }
     }
     &--back {
-      -webkit-transform: rotateY(180deg);
       transform: rotateY(180deg);
       background-color: $color-white;
       font-size: 1.4rem;
@@ -136,11 +134,9 @@
     transition-delay: 0s;
   }
   &:checked + .card .card__side--front {
-    -webkit-transform: rotateY(-180deg);
     transform: rotateY(-180deg);
   }
   &:checked + .card .card__side--back {
-    -webkit-transform: rotateY(0);
     transform: rotateY(0);
     height: 80vh;
     width: 80vw;
