--- a/sass/components/_collapsible.scss
+++ b/sass/components/_collapsible.scss
@@ -14,7 +14,7 @@
     transform: translateY(0);
   }
   &__section {
-    transition: all 0.5s ease-in-out;
+    transition: max-height 0.5s ease-in-out;
     // animation-timing-function: linear;
     transform-style: preserve-3d;
     display: block;
@@ -40,7 +40,7 @@
       background-color: $color-grey-dark;
       display: block;
       position: absolute;
-      transition: all 0.5s ease-in-out;
+      transition: transform 0.5s ease-in-out;
     }
     &::after {
       content: "";
@@ -49,7 +49,7 @@
   }
   &__content {
     margin-top: 1rem;
-    transition: all 0.5s ease-in-out;
+    transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out;
     font-size: 1.5rem;
     opacity: 0;
     transform: translateY(-5rem);
